--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -395,7 +395,7 @@ a {
 .img-clue a {
   color: #000;
   font-size: 16px;
-  text-justify: newspaper;
+  text-justify: auto;
   word-wrap: break-word;
 }
 
